--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="coffee">
+<html lang="en" data-theme="valentine">
   <head>
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
@@ -7,6 +7,7 @@
     <title>Vite App</title>
   </head>
   <body>
+    <h1>My Shopping List</h1>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
